Bug-fix: add overflow:hidden to #board-container to hide the animated border on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,7 @@ body {
 
 #board-container {
     position: relative;
+    overflow: hidden;
 }
 
 #game-stats {
